<resources>
    <string name="app_name">Daily Carl</string>
    <string name="email_login_text">Email</string>
    <string name="pass_login_text">Password</string>
    <string name="login_button">Log in</string>
    <string name="need_account">Need an account?</string>
    <string name="point_to_signup"><u>Sign up here</u></string>
    <string name="daily_carl">logo</string>
    <string name="login_email_input" />
    <string name="pass_login_input" />
    <string name="logo">logo</string>
    <string name="name_signup">Name</string>
    <string name="name_singup_input" />
    <string name="email_signup_input" />
    <string name="pass_signup_input" />
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_pass_input" />
    <string name="signup_button">Register</string>
    <string name="have_account">Already have account?</string>
    <string name="point_to_login"><u>Login here</u></string>
    <string name="action_bar">Daily Carl</string>
    <string name="action_bar_goal">Goal</string>
    <string name="goal_title">Set your goal</string>
    <string name="ex_logo">ex_logo</string>
    <string name="exercise_goal_input" />
    <string name="cal_per_day">Cal/day</string>
    <string name="food_logo">food_logo</string>
    <string name="food_goal_input" />
    <string name="cal_per_day_food">Cal/day</string>
    <string name="goal_submit">OK</string>
    <string name="user_profile">user profile</string>
    <string name="user_name">Ampere Vipawan</string>
    <string name="nav_add_activity">Add Activity</string>
    <string name="nav_viewCalory">View Remaining Calories</string>
    <string name="nav_editGoal">Edit Your Goal</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_logout">Logout</string>
    <string name="logout_logo">logout logo</string>
    <string name="add_eat_act_btn">Add Eat Activity</string>
    <string name="add_not_food_act">Add Exercise Activity</string>
    <string name="add_activity_title">Add Activity</string>
    <string name="setting_title">Setting</string>
    <string name="profile_view">profile view</string>
    <string name="setting_name">Name</string>
    <string name="setting_name_input" />
    <string name="setting_email">Email</string>
    <string name="setting_email_input" />
    <string name="setting_update">Update</string>
    <string name="language">Language</string>
    <string name="eat_and_ex_tab_bar">Eat/Ex Activity</string>
    <string name="left_arrow_activity">left arrow</string>
    <string name="activity_image">activity_image</string>
    <string name="menu_activity">Menu</string>
    <string name="menu_input" />
    <string name="cal_act">Calories</string>
    <string name="cal_act_input" />
    <string name="location_act">Location</string>
    <string name="okay_act_btn">OK</string>
    <string name="loc_act_input" />
    <string name="view_cal_day">Day</string>
    <string name="view_cal_week">Week</string>
    <string name="view_cal_month">Month</string>
    <string name="day_title_view_day">Day:</string>
    <string name="day_picker_view_day">Today</string>
    <string name="editGoal_title">Update your goal for today</string>
    <string name="editGoal_exLogo">editGoal_exLogo</string>
    <string name="editGoal_ex_input" />
    <string name="editGoal_ex_calPerDay">calories/day</string>
    <string name="editGoal_foodLogo">editGoal_foodLogo</string>
    <string name="editGoal_food_input" />
    <string name="editGoal_food_calPerDay">calories/day</string>
    <string name="editGoal_update_btn">Update</string>
    <string name="viewWeek_month">Month: </string>
    <string name="viewWeek_pickMonth">This month</string>
    <string name="viewMonth_month">Month: </string>
    <string name="viewMonth_pickMonth">This month</string>
    <string name="day_act">Day</string>
    <string name="day_act_picker">Choose your day</string>
    <string name="viewCal_food_goal_title">Your food goal:</string>
    <string name="viewCal_goal_data">0 Calories</string>
    <string name="viewCal_food_title">Your food calories:</string>
    <string name="viewCal_food_data">0 Calories</string>
    <string name="viewCal_ex_gaol_title">Your exercise goal:</string>
    <string name="viewCal_ex_gaol_data">0 Calories</string>
    <string name="viewCal_ex_title">Your exercise calories:</string>
    <string name="viewCal_ex_data">0 Calories</string>
    <string name="viewMonth_goal_ex_title">Your total exercise goal:</string>
    <string name="viewMonth_goal_ex_data">0 Calories</string>
    <string name="viewMonth_cal_ex_title">Your total exercise calories:</string>
    <string name="viewMonth_cal_ex_data">0 Calories</string>
    <string name="viewMonth_goal_food_title">Your total food goal:</string>
    <string name="viewMonth_goal_food_data">0 Calories</string>
    <string name="viewMonth_cal_food_title">Your total food calories:</string>
    <string name="viewMonth_cal_food_data">0 Calories</string>
    <string name="ex_act_week">Exercise Activity (every week):</string>
    <string name="food_act_week">Food Activity (every week):</string>
    <string name="viewWeek_ex_week_title">Week</string>
    <string name="viewWeek_ex_cal_title">Exercise (Cals)</string>
    <string name="viewWeek_ex_goal_title">Goal (Cals)</string>
    <string name="viewWeek_food_week_title">Week</string>
    <string name="viewWeek_food_cal_title">Food (Cals)</string>
    <string name="viewWeek_food_goal_title">Goal (Cals)</string>
    <string name="viewWeek_ex_cal1">0.0</string>
    <string name="viewWeek_ex_goal1">0.0</string>
    <string name="viewWeek_ex_cal2">0.0</string>
    <string name="viewWeek_ex_goal2">0.0</string>
    <string name="viewWeek_ex_cal3">0.0</string>
    <string name="viewWeek_ex_goal3">0.0</string>
    <string name="viewWeek_ex_cal4">0.0</string>
    <string name="viewWeek_ex_goal4">0.0</string>
    <string name="viewWeek_ex_cal5">0.0</string>
    <string name="viewWeek_ex_goal5">0.0</string>
    <string name="viewWeek_food_cal1">0.0</string>
    <string name="viewWeek_food_cal2">0.0</string>
    <string name="viewWeek_food_cal3">0.0</string>
    <string name="viewWeek_food_cal4">0.0</string>
    <string name="viewWeek_food_cal5">0.0</string>
    <string name="viewWeek_food_goal1">0.0</string>
    <string name="viewWeek_food_goal2">0.0</string>
    <string name="viewWeek_food_goal3">0.0</string>
    <string name="viewWeek_food_goal4">0.0</string>
    <string name="viewWeek_food_goal5">0.0</string>
    <string name="recycle_item_image">recycle_item_image</string>
    <string name="recycle_item_act_title">"Activity: "</string>
    <string name="recycle_item_act_data" />
    <string name="recycle_item_cal_title">"Calories: "</string>
    <string name="recycle_item_cal_data" />
    <string name="recycle_item_place_title">"Place: "</string>
    <string name="recycle_item_place_data" />
    <string name="delete">Delete</string>
    <string name="menu_logout">Logout</string>
    <string name="change_goal">Change Goal</string>
    <string name="ex_activity_exfood">Eat Activity</string>
    <string name="eat_activity_exfood">Exercise Activity</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="ex">Exercise: </string>
    <string name="food">Food: </string>
    <string name="location_page_bar" >Location</string>
    <string name="location_page_search">Enter your location</string>
    <string name="location_page_searchBtn">Search</string>
    <string name="location_page_title">Location:</string>
    <string name="location_page_result" />
    <string name="location_page_submit">OK</string>
    <string name="location_input">Choose your location</string>

    <string-array name="language_list">
        <item>English</item>
        <item>Thai</item>
    </string-array>
</resources>
