<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.EditGoalActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
       <ImageView
           android:id="@+id/editGoal_logo"
           android:layout_width="150dp"
           android:layout_height="150dp"
           android:layout_marginTop="80dp"
           android:contentDescription="@string/logo"
           app:srcCompat="@drawable/logo"/>

        <TextView
            android:id="@+id/editGoal_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:text="@string/editGoal_title"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="25sp"
            tools:text="@string/editGoal_title" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/editGoal_exLogo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/editGoal_exLogo"
                app:srcCompat="@drawable/ex_logo" />

            <EditText
                android:id="@+id/editGoal_ex_input"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/rounded_input"
                android:hint="@string/editGoal_ex_input"
                android:textAlignment="center"
                android:paddingHorizontal="20dp"
                android:layout_marginHorizontal="20dp"
                android:paddingVertical="10dp"
                android:textSize="20sp"
                android:inputType="number" />

            <TextView
                android:id="@+id/editGoal_ex_calPerDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editGoal_ex_calPerDay"
                android:textColor="#000"
                android:textSize="20sp"
                tools:text="@string/editGoal_ex_calPerDay" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/editGoal_foodLogo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/editGoal_foodLogo"
                app:srcCompat="@drawable/food_logo" />

            <EditText
                android:id="@+id/editGoal_food_input"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:background="@drawable/rounded_input"
                android:paddingVertical="10dp"
                android:paddingHorizontal="20dp"
                android:layout_marginHorizontal="20dp"
                android:ems="10"
                android:hint="@string/editGoal_food_input"
                android:inputType="number"
                android:textSize="20sp"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/editGoal_food_calPerDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="20sp"
                android:text="@string/editGoal_food_calPerDay" />
        </LinearLayout>

        <TextView
            android:id="@+id/editGoal_update_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="#000"
            android:layout_marginTop="50dp"
            android:background="@drawable/rounded_button"
            android:paddingHorizontal="50dp"
            android:paddingVertical="10dp"
            android:text="@string/editGoal_update_btn" />
    </LinearLayout>
</ScrollView>