<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.SettingActivity">

    <androidx.cardview.widget.CardView
        android:layout_height="150dp"
        android:layout_marginTop="70dp"
        app:cardElevation="0dp"
        app:cardCornerRadius="75dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="150dp">
        <ImageView
            android:id="@+id/profile_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/profile_view"
            app:srcCompat="@drawable/ic_account"
            tools:ignore="VectorDrawableCompat" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/setting_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginHorizontal="40dp"
        android:textColor="#000"
        android:layout_marginVertical="10dp"
        android:text="@string/setting_name" />

    <EditText
        android:id="@+id/setting_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:background="@drawable/rounded_input"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:textSize="20sp"
        android:layout_marginHorizontal="40dp"
        android:hint="@string/setting_name_input"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/setting_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:textSize="20sp"
        android:textColor="#000"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/setting_email" />

    <EditText
        android:id="@+id/setting_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/rounded_input"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp"
        android:textSize="20sp"
        android:hint="@string/setting_email_input"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:textColor="#000"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/language" />

    <Spinner
        android:id="@+id/language_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"
        android:background="@drawable/rounded_input"
        android:entries="@array/language_list"/>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/setting_update"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:background="@drawable/rounded_button"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:textColor="#000"
        android:layout_height="wrap_content"
        android:text="@string/setting_update" />
</LinearLayout>